--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@octokit/rest": "^17.9.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@zeit/ncc": "^0.22.3",
     "eslint": "^6.8.0"
   },
