Fix the action file and the workflow
Signed-off-by: alejandrojnm <alejandrojnm@gmail.com>

--- a/action.yml
+++ b/action.yml
@@ -15,5 +15,5 @@ outputs:
   version:
     description: "civo cli version"
 runs:
-  using: "docker"
-  image: "Dockerfile"
+  using: 'node16'
+  main: 'dist/index.js'
