--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -83,4 +83,4 @@ jobs:
           If (-NOT  ($VERSION -eq "v1.0.48")) { exit 1 }
 
       - name: Verify log-in
-        run: doctl compute region list
+        run: civo region ls
